cmake_minimum_required(VERSION 3.3)
project(Prog1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES)
add_executable(Aula2-Problema1 Aula_Pratica_02/Problema_1.c)
add_executable(Aula2-Problema2 Aula_Pratica_02/Problema_2.c)
add_executable(Aula2-Problema3 Aula_Pratica_02/Problema_3.c)
add_executable(Aula2-Problema4 Aula_Pratica_02/Problema_4.c)
add_executable(Aula2-Problema5 Aula_Pratica_02/Problema_5.c)
add_executable(Aula2-Problema6 Aula_Pratica_02/Problema_6.c)
add_executable(Aula2-Problema7 Aula_Pratica_02/Problema_7.c)
add_executable(Aula2-Problema8 Aula_Pratica_02/Problema_8.c)
add_executable(Aula3-Problema1 Aula_Pratica_03/Problema_1.c)
add_executable(Aula3-Problema2 Aula_Pratica_03/Problema_2.c)
add_executable(Aula3-Problema3 Aula_Pratica_03/Problema_3.c)
add_executable(Aula3-Problema4 Aula_Pratica_03/Problema_4.c)
add_executable(Aula3-Problema5 Aula_Pratica_03/Problema_5.c)
add_executable(Aula3-Problema6 Aula_Pratica_03/Problema_6.c)
add_executable(Aula3-Problema7 Aula_Pratica_03/Problema_7.c)
add_executable(Aula3-Problema8 Aula_Pratica_03/Problema_8.c)
add_executable(Aula4-Problema1 Aula_Pratica_04/Problema_1.c)
add_executable(Aula4-Problema2 Aula_Pratica_04/Problema_2.c)
add_executable(Aula4-Problema3 Aula_Pratica_04/Problema_3.c)
add_executable(Aula4-Problema4 Aula_Pratica_04/Problema_4.c)
add_executable(Aula4-Problema5 Aula_Pratica_04/Problema_5.c)
add_executable(Aula5-Problema1 Aula_Pratica_05/Problema_1.c)
add_executable(Aula5-Problema2 Aula_Pratica_05/Problema_2.c)
add_executable(Aula5-Problema3 Aula_Pratica_05/Problema_3.c)
add_executable(Aula5-Problema4 Aula_Pratica_05/Problema_4.c)
add_executable(Aula5-Problema5 Aula_Pratica_05/Problema_5.c)
add_executable(Aula5-Problema6 Aula_Pratica_05/Problema_6.c)
add_executable(Aula6-Problema1_1 Aula_Pratica_06/Problema_1_1.c)
add_executable(Aula6-Problema1_2 Aula_Pratica_06/Problema_1_2.c)
add_executable(Aula6-Problema2 Aula_Pratica_06/Problema2.c)
add_executable(Aula6-Problema3 Aula_Pratica_06/Problema3.c)
add_executable(Aula6-Problema4 Aula_Pratica_06/Problema4.c)
add_executable(Aula6-Problema5 Aula_Pratica_06/Problema5.c)
add_executable(Aula6-Problema6 Aula_Pratica_06/Problema6.c)


