cmake_minimum_required(VERSION 3.3)
project(Prog1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c89 -pedantic-errors")

set(SOURCE_FILES)
add_executable(MTEX1_Exercicio1 Extras/Mini-teste_exemplo/Problema_1.c)
add_executable(MTEX1_Exercicio2_1 Extras/Mini-teste_exemplo/Problema_2_1.c)
add_executable(MTEX1_Exercicio2_2 Extras/Mini-teste_exemplo/Problema_2_2.c)
add_executable(MT1_Exercicio1 Extras/Mini-teste1/Exercicio_1.c)
add_executable(MT1_Exercicio2_1 Extras/Mini-teste1/Exercicio_2_1.c)
add_executable(MT1_Exercicio2_2 Extras/Mini-teste1/Exercicio_2_2.c)
add_executable(Extras-Formula_Resolvente Extras/Formula_Resolvente.c)
add_executable(Aula1-exp Aula_Pratica_01/exp.c)
add_executable(Aula1-input Aula_Pratica_01/input.c)
add_executable(Aula2-Problema1 Aula_Pratica_02/Problema_1.c)
add_executable(Aula2-Problema2 Aula_Pratica_02/Problema_2.c)
add_executable(Aula2-Problema3 Aula_Pratica_02/Problema_3.c)
add_executable(Aula2-Problema4 Aula_Pratica_02/Problema_4.c)
add_executable(Aula2-Problema5 Aula_Pratica_02/Problema_5.c)
add_executable(Aula2-Problema6 Aula_Pratica_02/Problema_6.c)
add_executable(Aula2-Problema7 Aula_Pratica_02/Problema_7.c)
add_executable(Aula2-Problema8 Aula_Pratica_02/Problema_8.c)
add_executable(Aula3-Problema1 Aula_Pratica_03/Problema_1.c)
add_executable(Aula3-Problema2 Aula_Pratica_03/Problema_2.c)
add_executable(Aula3-Problema3 Aula_Pratica_03/Problema_3.c)
add_executable(Aula3-Problema4 Aula_Pratica_03/Problema_4.c)
add_executable(Aula3-Problema5 Aula_Pratica_03/Problema_5.c)
add_executable(Aula3-Problema6 Aula_Pratica_03/Problema_6.c)
add_executable(Aula3-Problema7 Aula_Pratica_03/Problema_7.c)
add_executable(Aula3-Problema8 Aula_Pratica_03/Problema_8.c)
add_executable(Aula4-Problema1 Aula_Pratica_04/Problema_1.c)
add_executable(Aula4-Problema2 Aula_Pratica_04/Problema_2.c)
add_executable(Aula4-Problema3 Aula_Pratica_04/Problema_3.c)
add_executable(Aula4-Problema4 Aula_Pratica_04/Problema_4.c)
add_executable(Aula4-Problema5 Aula_Pratica_04/Problema_5.c)
add_executable(Aula5-Problema1 Aula_Pratica_05/Problema_1.c)
add_executable(Aula5-Problema2 Aula_Pratica_05/Problema_2.c)
add_executable(Aula5-Problema3 Aula_Pratica_05/Problema_3.c)
add_executable(Aula5-Problema4 Aula_Pratica_05/Problema_4.c)
add_executable(Aula5-Problema5 Aula_Pratica_05/Problema_5.c)
add_executable(Aula5-Problema6 Aula_Pratica_05/Problema_6.c)
add_executable(Aula6-Problema1 Aula_Pratica_06/Problema_1.c)
add_executable(Aula6-Problema2 Aula_Pratica_06/Problema_2.c)
add_executable(Aula6-Problema3 Aula_Pratica_06/Problema_3.c)
add_executable(Aula6-Problema4 Aula_Pratica_06/Problema_4.c)
add_executable(Aula6-Problema5 Aula_Pratica_06/Problema_5.c)
add_executable(Aula6-Problema6 Aula_Pratica_06/Problema_6.c)
add_executable(Aula6-Problema7 Aula_Pratica_06/Problema_7.c)
add_executable(Aula7-Problema1 Aula_Pratica_07/Problema_1.c)
add_executable(Aula7-Problema2 Aula_Pratica_07/Problema_2.c)
add_executable(Aula7-Problema3 Aula_Pratica_07/Problema_3.c)
add_executable(Aula7-Problema4 Aula_Pratica_07/Problema_4.c)
add_executable(Aula7-Problema4_a Aula_Pratica_07/Problema_4_a.c)
add_executable(Aula7-Problema5 Aula_Pratica_07/Problema_5.c)
add_executable(Aula7-Problema5_a Aula_Pratica_07/Problema_5_a.c)
add_executable(Aula7-Problema6 Aula_Pratica_07/Problema_6.c)
add_executable(Aula7-Problema8 Aula_Pratica_07/Problema_8.c)
add_executable(Aula8-Problema1 Aula_Pratica_08/Problema_1.c)
add_executable(Aula8-Problema1_2 Aula_Pratica_08/Problema_1_2.c)
add_executable(Aula8-Problema2 Aula_Pratica_08/Problema_2.c)
add_executable(Aula8-Problema3 Aula_Pratica_08/Problema_3.c)
add_executable(Aula8-Problema4 Aula_Pratica_08/Problema_4.c)
add_executable(Aula9-Problema1 Aula_Pratica_09/Problema_1.c)
add_executable(Aula9-Problema2 Aula_Pratica_09/Problema_2.c)
add_executable(Aula9-Problema3 Aula_Pratica_09/Problema_3.c)
add_executable(Aula9-Problema5 Aula_Pratica_09/Problema_4.c)
add_executable(Aula9-Problema5a Aula_Pratica_09/Problema_5a.c)
add_executable(Aula9-Problema5b Aula_Pratica_09/Problema_5b.c)
add_executable(Aula10-Problema1 Aula_Pratica_10/Problema_1.c)
add_executable(Aula10-Problema2 Aula_Pratica_10/Problema_2.c)
add_executable(Aula10-Problema3 Aula_Pratica_10/Problema_3.c)
add_executable(Aula10-Problema4 Aula_Pratica_10/Problema_4.c)
add_executable(Aula10-Problema1_b Aula_Pratica_10/Problema_1_b.c)
add_executable(Aula11-Problema1 Aula_Pratica_11/Problema_1.c)
add_executable(Aula11-Problema2 Aula_Pratica_11/Problema_2.c)
add_executable(Aula11-Problema3 Aula_Pratica_11/Problema_3.c)
add_executable(Aula11-Problema4 Aula_Pratica_11/Problema_4.c)
add_executable(Aula11-Problema5 Aula_Pratica_11/Problema_5.c)
add_executable(Aula11-Problema6 Aula_Pratica_11/Problema_6.c)
add_executable(Aula11-Problema7 Aula_Pratica_11/Problema_7.c)
add_executable(Aula11-Problema8 Aula_Pratica_11/Problema_8.c)
add_executable(Aula11-Problema9 Aula_Pratica_11/Problema_9.c)
add_executable(Aula11-Problema10 Aula_Pratica_11/Problema_10.c)
add_executable(Aula11-Problema11 Aula_Pratica_11/Problema_11.c)
add_executable(Aula11-Problema12 Aula_Pratica_11/Problema_12.c)
add_executable(Aula12-Problema1 Aula_Pratica_12/Problema_1/Problema_1.c Aula_Pratica_12/Problema_1/poli.c Aula_Pratica_12/Problema_1/poli.h)
add_executable(Aula12-Problema2 Aula_Pratica_12/Problema_2/Problema_2.c Aula_Pratica_12/Problema_2/datas.c Aula_Pratica_12/Problema_2/datas.h)
add_executable(Aula12-Problema3 Aula_Pratica_12/Problema_3/Problema_3.c Aula_Pratica_12/Problema_3/complexo.c Aula_Pratica_12/Problema_3/complexo.h)
add_executable(Aula12-Problema4 Aula_Pratica_12/Problema_4/Problema_4.c Aula_Pratica_12/Problema_4/armazem.c Aula_Pratica_12/Problema_4/armazem.h)
add_executable(Aula12-Problema5 Aula_Pratica_12/Problema_5/game.c Aula_Pratica_12/Problema_5/cards.c Aula_Pratica_12/Problema_5/cards.h Aula_Pratica_12/Problema_5/player.c Aula_Pratica_12/Problema_5/player.h)
add_executable(Aula13-Problema1 Aula_Pratica_13/Problema_1/Problema_1.c)
add_executable(Aula13-Problema2 Aula_Pratica_13/Problema_2/Problema_2.c)
add_executable(Aula13-Problema3 Aula_Pratica_13/Problema_3/Problema_3.c)
add_executable(Aula13-Problema4 Aula_Pratica_13/Problema_4/Problema_4.c)
add_executable(Aula13-Problema5 Aula_Pratica_13/Problema_5/Problema_5.c)
add_executable(Aula13-Problema6 Aula_Pratica_13/Problema_6/Problema_6.c)